--- a/Bubbles07-Csharpified/Bubbles07Reborn.csproj
+++ b/Bubbles07-Csharpified/Bubbles07Reborn.csproj
@@ -3,8 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
-    <RootNamespace>
-	_Csharpified</RootNamespace>
+    <RootNamespace>Continuance</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
